<resources>
    <string name="app_name">NaszDom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ul. Tęczowa (ob: 0013, dz: 223/24)</string>
    <string name="nav_header_subtitle">KW GD1G/00238317/5, ter: 220404_2</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_project_home_preview">Podgląd</string>

    <string name="menu_group_map">Mapy</string>
    <string name="menu_group_doc">Dokumenty</string>
    <string name="menu_group_developers">Projekty</string>
    <string name="menu_group_project">Projektanci</string>
    <string name="menu_group_else">Pozostałe</string>

    <string name="menu_home">Home</string>

    <string name="menu_emapa">E-Mapa</string>
    <string name="menu_geoportal">Geoportal</string>

    <string name="menu_land_register">Księga wieczysta</string>
    <string name="menu_mpzp">MPZP</string>

    <string name="menu_z500">Z500</string>
    <string name="menu_extra_dom">Extra Dom</string>
    <string name="menu_archon">Archon</string>
    <string name="menu_archeton">Archeton</string>
    <string name="menu_murator">Murator Dom</string>

    <string name="menu_przytulny3">Przytulny3</string>
    <string name="menu_zimmermannhaus">Dom Klasyczny XL</string>
    <string name="menu_samborrex">Sambor Rex</string>

    <string name="menu_contacts">Kontakty</string>
    <string name="menu_notes">Notatki</string>
</resources>